src/test/ui/codemap_tests/huge_multispan_highlight.stderr
error: cannot borrow immutable local variable `x` as mutable
   --> $DIR/huge_multispan_highlight.rs:100:18
    |
12  |     let x = "foo";
    |         - use `mut x` here to make mutable
...
100 |     let y = &mut x;
    |                  ^ cannot borrow mutably

error: aborting due to previous error

